Apply translation memory

--- a/l10n/po/ja_JP/_guides/gradle-tooling.adoc.po
+++ b/l10n/po/ja_JP/_guides/gradle-tooling.adoc.po
@@ -445,17 +445,17 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/gradle-tooling.adoc:239
 msgid "This tells Quarkus to use the mutable-jar format. Mutable applications also include the deployment time parts of Quarkus, so they take up a bit more disk space. If run normally they start just as fast and use the same memory as an immutable application, however they can also be started in dev mode."
-msgstr ""
+msgstr "これは、QuarkusにMutable-jar形式を使用するように指示します。ミュータブルアプリケーションには、Quarkusのデプロイメント時間の部分も含まれているため、より多くのディスクスペースを占有します。普通に実行した場合は、イミュータブルアプリケーションと同じ速度で起動し、同じメモリーを使用しますが、devモードで起動することもできます。"
 
 #. type: Plain text
 #: upstream/_guides/gradle-tooling.adoc:240
 msgid "The password that is used to secure communication between the remote side and the local side."
-msgstr ""
+msgstr "リモート側とローカル側の通信を安全に保つためのパスワードです。"
 
 #. type: Plain text
 #: upstream/_guides/gradle-tooling.adoc:242
 msgid "The URL that your app is going to be running in dev mode at. This is only needed on the local side, so you may want to leave it out of the properties file and specify it as a system property on the command line."
-msgstr ""
+msgstr "アプリがdevモードで実行されるURL。これはローカル側でのみ必要なので、プロパティー ファイルから除外して、コマンド ラインでシステム プロパティーとして指定するとよいでしょう。"
 
 #. type: Plain text
 #: upstream/_guides/gradle-tooling.adoc:244
@@ -482,7 +482,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/gradle-tooling.adoc:260
 msgid "The remote side does not need to include Maven or any other development tools. The normal `fast-jar` Dockerfile that is generated with a new Quarkus application is all you need. If you are using bare metal launch the Quarkus runner jar, do not attempt to run normal devmode."
-msgstr ""
+msgstr "リモート側にはMavenなどの開発ツールを入れる必要はありません。新しいQuarkusアプリケーションで生成される通常の `fast-jar`  Dockerfileがあれば大丈夫です。ベアメタルでQuarkus runner jarを起動している場合は、通常のdevmodeを実行しようとしないでください。"
 
 #. type: Plain text
 #: upstream/_guides/gradle-tooling.adoc:262
