--- a/l10n/po/ja_JP/_guides/kafka.adoc.po
+++ b/l10n/po/ja_JP/_guides/kafka.adoc.po
@@ -1879,7 +1879,7 @@ msgstr ""
 #: upstream/_guides/kafka.adoc:839
 #, no-wrap
 msgid "Configuration"
-msgstr ""
+msgstr "設定"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:843
@@ -1944,7 +1944,7 @@ msgstr ""
 #: upstream/_guides/kafka.adoc:865 upstream/_guides/kafka.adoc:1015
 #, no-wrap
 msgid "Default"
-msgstr ""
+msgstr "デフォルト"
 
 #. type: Table
 #: upstream/_guides/kafka.adoc:867 upstream/_guides/kafka.adoc:1021
