--- a/l10n/po/ja_JP/_guides/security-jwt.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-jwt.adoc.po
@@ -1893,13 +1893,13 @@ msgstr "トークン復号化"
 #. type: Plain text
 #: upstream/_guides/security-jwt.adoc:808
 msgid "Please see link:security-openid-connect-client#token-propagation[Token Propagation] section about the Bearer access token propagation to the downstream services."
-msgstr ""
+msgstr "下流サービスへのベアラアクセストークンの伝播については、 link:security-openid-connect-client#token-propagation[トークン伝播] の項を参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/security-jwt.adoc:810
 #, no-wrap
 msgid "Testing"
-msgstr ""
+msgstr "テスト"
 
 #. type: Title ===
 #: upstream/_guides/security-jwt.adoc:812
