--- a/l10n/po/ja_JP/_guides/smallrye-health.adoc.po
+++ b/l10n/po/ja_JP/_guides/smallrye-health.adoc.po
@@ -39,12 +39,12 @@ msgstr ""
 #: upstream/_guides/smallrye-health.adoc:18
 #, no-wrap
 msgid "Prerequisites"
-msgstr ""
+msgstr "前提条件"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-health.adoc:21
 msgid "To complete this guide, you need:"
-msgstr ""
+msgstr "このガイドを完成させるには、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-health.adoc:23
@@ -54,23 +54,23 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/smallrye-health.adoc:24
 msgid "an IDE"
-msgstr ""
+msgstr "IDE"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-health.adoc:25
 msgid "JDK 1.8+ installed with `JAVA_HOME` configured appropriately"
-msgstr ""
+msgstr "JDK 1.8+ がインストールされ、 `JAVA_HOME`  が適切に設定されていること"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-health.adoc:26
 msgid "Apache Maven {maven-version}"
-msgstr ""
+msgstr "Apache Maven {maven-version}"
 
 #. type: Title ==
 #: upstream/_guides/smallrye-health.adoc:27
 #, no-wrap
 msgid "Architecture"
-msgstr ""
+msgstr "アーキテクチャ"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-health.adoc:32
@@ -81,17 +81,18 @@ msgstr ""
 #: upstream/_guides/smallrye-health.adoc:33
 #, no-wrap
 msgid "Solution"
-msgstr ""
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-health.adoc:37
+#, fuzzy
 msgid "We recommend that you follow the instructions in the next sections and create the application step by step. However, you can go right to the completed example."
-msgstr ""
+msgstr "次の章で紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。ただし、完成した例にそのまま進んでも構いません。"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-health.adoc:40
 msgid "Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive]."
-msgstr ""
+msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone-url}` 、 {quickstarts-archive-url}[アーカイブ] をダウンロードします。"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-health.adoc:43
@@ -107,7 +108,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/smallrye-health.adoc:47
 msgid "First, we need a new project. Create a new project with the following command:"
-msgstr ""
+msgstr "まず、新しいプロジェクトが必要です。以下のコマンドで新規プロジェクトを作成します。"
 
 #. type: delimited block -
 #: upstream/_guides/smallrye-health.adoc:55
@@ -135,12 +136,12 @@ msgstr ""
 #: upstream/_guides/smallrye-health.adoc:358
 #, no-wrap
 msgid "./mvnw quarkus:add-extension -Dextensions=\"smallrye-health\"\n"
-msgstr ""
+msgstr "./mvnw quarkus:add-extension -Dextensions=\"smallrye-health\"\n"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-health.adoc:68
 msgid "This will add the following to your `pom.xml`:"
-msgstr ""
+msgstr "これにより、 `pom.xml` に以下が追加されます:"
 
 #. type: delimited block -
 #: upstream/_guides/smallrye-health.adoc:75
@@ -152,6 +153,10 @@ msgid ""
 "    <artifactId>quarkus-smallrye-health</artifactId>\n"
 "</dependency>\n"
 msgstr ""
+"<dependency>\n"
+"    <groupId>io.quarkus</groupId>\n"
+"    <artifactId>quarkus-smallrye-health</artifactId>\n"
+"</dependency>\n"
 
 #. type: Title ==
 #: upstream/_guides/smallrye-health.adoc:77
@@ -202,12 +207,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/smallrye-health.adoc:94
 msgid "`status` -- the overall result of all the health check procedures"
-msgstr ""
+msgstr "`status` -- the overall result of all the health check procedures"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-health.adoc:95
 msgid "`checks` -- an array of individual checks"
-msgstr ""
+msgstr "`checks` -- an array of individual checks"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-health.adoc:99
@@ -255,7 +260,7 @@ msgstr ""
 #: upstream/_guides/smallrye-health.adoc:286
 #, no-wrap
 msgid "import javax.enterprise.context.ApplicationScoped;\n"
-msgstr ""
+msgstr "import javax.enterprise.context.ApplicationScoped;\n"
 
 #. type: delimited block -
 #: upstream/_guides/smallrye-health.adoc:119
@@ -614,7 +619,7 @@ msgstr ""
 #: upstream/_guides/smallrye-health.adoc:344
 #, no-wrap
 msgid "Conclusion"
-msgstr ""
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-health.adoc:350
@@ -629,15 +634,15 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/smallrye-health.adoc:355
 msgid "adding the `smallrye-health` Quarkus extension to your project using the `quarkus-maven-plugin`: +"
-msgstr ""
+msgstr "`smallrye-health` Quarkusエクステンションをプロジェクトに追加するには、 `quarkus-maven-plugin`. +"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-health.adoc:361
 msgid "or simply adding the following Maven dependency: +"
-msgstr ""
+msgstr "または、単に以下のMaven依存関係を追加するだけです。"
 
 #. type: Title ==
 #: upstream/_guides/smallrye-health.adoc:369
 #, no-wrap
 msgid "Configuration Reference"
-msgstr ""
+msgstr "設定リファレンス"
