--- a/l10n/po/ja_JP/_guides/smallrye-fault-tolerance.adoc.po
+++ b/l10n/po/ja_JP/_guides/smallrye-fault-tolerance.adoc.po
@@ -39,12 +39,12 @@ msgstr ""
 #: upstream/_guides/smallrye-fault-tolerance.adoc:19
 #, no-wrap
 msgid "Prerequisites"
-msgstr ""
+msgstr "前提条件"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-fault-tolerance.adoc:22
 msgid "To complete this guide, you need:"
-msgstr ""
+msgstr "このガイドを完成させるには、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-fault-tolerance.adoc:24
@@ -54,23 +54,23 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/smallrye-fault-tolerance.adoc:25
 msgid "an IDE"
-msgstr ""
+msgstr "IDE"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-fault-tolerance.adoc:26
 msgid "JDK 1.8+ installed with `JAVA_HOME` configured appropriately"
-msgstr ""
+msgstr "JDK 1.8+ がインストールされ、 `JAVA_HOME`  が適切に設定されていること"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-fault-tolerance.adoc:27
 msgid "Apache Maven {maven-version}"
-msgstr ""
+msgstr "Apache Maven {maven-version}"
 
 #. type: Title ==
 #: upstream/_guides/smallrye-fault-tolerance.adoc:28
 #, no-wrap
 msgid "The Scenario"
-msgstr ""
+msgstr "シナリオ"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-fault-tolerance.adoc:32
@@ -86,22 +86,22 @@ msgstr ""
 #: upstream/_guides/smallrye-fault-tolerance.adoc:36
 #, no-wrap
 msgid "Solution"
-msgstr ""
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-fault-tolerance.adoc:40
 msgid "We recommend that you follow the instructions in the next sections and create the application step by step.  However, you can go right to the completed example."
-msgstr ""
+msgstr "次の章で紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。ただし、完成した例にそのまま進んでも構いません。"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-fault-tolerance.adoc:42
 msgid "Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive]."
-msgstr ""
+msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone-url}` 、 {quickstarts-archive-url}[アーカイブ] をダウンロードします。"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-fault-tolerance.adoc:44
 msgid "The solution is located in the `microprofile-fault-tolerance-quickstart` {quickstarts-tree-url}/microprofile-fault-tolerance-quickstart[directory]."
-msgstr ""
+msgstr "ソリューションは `microprofile-fault-tolerance-quickstart` {quickstarts-tree-url}/microprofile-fault-tolerance-quickstart[directory] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/smallrye-fault-tolerance.adoc:45
@@ -112,7 +112,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/smallrye-fault-tolerance.adoc:48
 msgid "First, we need a new project. Create a new project with the following command:"
-msgstr ""
+msgstr "まず、新しいプロジェクトが必要です。以下のコマンドで新規プロジェクトを作成します。"
 
 #. type: delimited block -
 #: upstream/_guides/smallrye-fault-tolerance.adoc:58
@@ -135,7 +135,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/smallrye-fault-tolerance.adoc:64
 msgid "If you already have your Quarkus project configured, you can add the `smallrye-fault-tolerance` extension to your project by running the following command in your project base directory:"
-msgstr ""
+msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリーで以下のコマンドを実行することで、プロジェクトに `smallrye-fault-tolerance` エクステンションを追加することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/smallrye-fault-tolerance.adoc:68
@@ -147,7 +147,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/smallrye-fault-tolerance.adoc:71
 msgid "This will add the following to your `pom.xml`:"
-msgstr ""
+msgstr "これにより、 `pom.xml` に以下が追加されます:"
 
 #. type: delimited block -
 #: upstream/_guides/smallrye-fault-tolerance.adoc:78
@@ -164,7 +164,7 @@ msgstr ""
 #: upstream/_guides/smallrye-fault-tolerance.adoc:80
 #, no-wrap
 msgid "Preparing an Application: REST Endpoint and CDI Bean"
-msgstr ""
+msgstr "アプリケーションの準備: RESTエンドポイントとCDI Bean"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-fault-tolerance.adoc:84
@@ -401,7 +401,7 @@ msgstr ""
 #: upstream/_guides/smallrye-fault-tolerance.adoc:208
 #, no-wrap
 msgid "./mvnw compile quarkus:dev\n"
-msgstr ""
+msgstr "./mvnw compile quarkus:dev\n"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-fault-tolerance.adoc:213
@@ -783,7 +783,7 @@ msgstr ""
 #: upstream/_guides/smallrye-fault-tolerance.adoc:448
 #, no-wrap
 msgid "Runtime configuration"
-msgstr ""
+msgstr "ランタイム設定"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-fault-tolerance.adoc:451
@@ -821,7 +821,7 @@ msgstr ""
 #: upstream/_guides/smallrye-fault-tolerance.adoc:481
 #, no-wrap
 msgid "Conclusion"
-msgstr ""
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-fault-tolerance.adoc:485
