--- a/l10n/po/ja_JP/_guides/smallrye-graphql.adoc.po
+++ b/l10n/po/ja_JP/_guides/smallrye-graphql.adoc.po
@@ -33,12 +33,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/smallrye-graphql.adoc:14
 msgid "As the https://www.graphql.org/[GraphQL] specification website states:"
-msgstr ""
+msgstr "link:https://www.graphql.org/[GraphQLの] 仕様サイトにも記載されているように"
 
 #. type: quote
 #: upstream/_guides/smallrye-graphql.adoc:20
 msgid "GraphQL is a query language for APIs and a runtime for fulfilling those queries with your existing data.  GraphQL provides a complete and understandable description of the data in your API, gives clients the power to ask for exactly what they need and nothing more, makes it easier to evolve APIs over time, and enables powerful developer tools."
-msgstr ""
+msgstr "GraphQLは、APIのクエリ言語であり、既存のデータでこれらのクエリを実行するためのランタイムです。 GraphQLは、API内のデータの完全で理解しやすい説明を提供し、クライアントが必要なものだけを正確に要求できるようにし、時間の経過とともにAPIを進化させやすくし、強力な開発者ツールを実現にします。"
 
 #. type: quote
 #: upstream/_guides/smallrye-graphql.adoc:23
@@ -46,23 +46,23 @@ msgstr ""
 msgid ""
 "**GraphQL** was originally developed by **Facebook** in 2012 and has been\n"
 "an open standard since 2015.\n"
-msgstr ""
+msgstr "**GraphQL** はもともと2012年に **Facebook** が開発したもので、2015年からはオープンスタンダードとなっています。\n"
 
 #. type: quote
 #: upstream/_guides/smallrye-graphql.adoc:26
 msgid "GraphQL is not a replacement for REST API specification but merely an alternative. Unlike REST, GraphQL API's have the ability to benefit the client by:"
-msgstr ""
+msgstr "GraphQLはREST APIの仕様を置き換えるものではなく、単なる別の手段です。RESTとは異なり、GraphQL APIは以下のようにクライアントに利益をもたらす機能を持っています。"
 
 #. type: Labeled list
 #: upstream/_guides/smallrye-graphql.adoc:27
 #, no-wrap
 msgid "Preventing Over-fetching and Under-fetching"
-msgstr ""
+msgstr "オーバーフェッチとアンダーフェッチの防止"
 
 #. type: quote
 #: upstream/_guides/smallrye-graphql.adoc:33
 msgid "REST API's are server-driven fixed data responses that cannot be determined by the client. Although the client does not require all the fields the client must retrieve all the data hence `Over-fetching`. A client may also require multiple REST API calls according to the first call (HATEOAS) to retrieve all the data that is required thereby `Under-fetching`."
-msgstr ""
+msgstr "REST API は、クライアントが決定できないサーバー主導の固定データレスポンスです。クライアントはすべてのフィールドを必要としなくても、クライアントはすべてのデータを取得しなければならないため、 `Over-fetching` です。クライアントはまた、必要とされるすべてのデータを取得するために、最初の呼び出し(HATEOAS)に応じて複数のREST API呼び出しを必要とする場合があり、 `Under-fetching` です。"
 
 #. type: Labeled list
 #: upstream/_guides/smallrye-graphql.adoc:34
@@ -73,18 +73,18 @@ msgstr ""
 #. type: quote
 #: upstream/_guides/smallrye-graphql.adoc:38
 msgid "Since GraphQL API's returns data that are requested by the client adding additional fields and capabilities to existing API will not create breaking changes to existing clients."
-msgstr ""
+msgstr "GraphQL APIはクライアントから要求されたデータを返すので、既存のAPIにフィールドや機能を追加しても、既存のクライアントに大きな変更を加えることはありません。"
 
 #. type: Title ==
 #: upstream/_guides/smallrye-graphql.adoc:39
 #, no-wrap
 msgid "Prerequisites"
-msgstr ""
+msgstr "前提条件"
 
 #. type: quote
 #: upstream/_guides/smallrye-graphql.adoc:42
 msgid "To complete this guide, you need:"
-msgstr ""
+msgstr "このガイドを完成させるには、以下が必要です:"
 
 #. type: quote
 #: upstream/_guides/smallrye-graphql.adoc:44
@@ -94,54 +94,54 @@ msgstr ""
 #. type: quote
 #: upstream/_guides/smallrye-graphql.adoc:45
 msgid "an IDE"
-msgstr ""
+msgstr "IDE"
 
 #. type: quote
 #: upstream/_guides/smallrye-graphql.adoc:46
 msgid "JDK 1.8+ installed with `JAVA_HOME` configured appropriately"
-msgstr ""
+msgstr "JDK 1.8+ がインストールされ、 `JAVA_HOME`  が適切に設定されていること"
 
 #. type: quote
 #: upstream/_guides/smallrye-graphql.adoc:47
 msgid "Apache Maven {maven-version}"
-msgstr ""
+msgstr "Apache Maven {maven-version}"
 
 #. type: Title ==
 #: upstream/_guides/smallrye-graphql.adoc:48
 #, no-wrap
 msgid "Architecture"
-msgstr ""
+msgstr "アーキテクチャ"
 
 #. type: quote
 #: upstream/_guides/smallrye-graphql.adoc:52
 msgid "In this guide, we build a simple GraphQL application that exposes a GraphQL API at `/graphql`."
-msgstr ""
+msgstr "このガイドでは、 `/graphql` で GraphQL API を公開するシンプルな GraphQL アプリケーションを構築します。"
 
 #. type: quote
 #: upstream/_guides/smallrye-graphql.adoc:54
 msgid "This example was inspired by a popular GraphQL API."
-msgstr ""
+msgstr "この例は、人気のある GraphQL API にインスパイアされたものです。"
 
 #. type: Title ==
 #: upstream/_guides/smallrye-graphql.adoc:55
 #, no-wrap
 msgid "Solution"
-msgstr ""
+msgstr "ソリューション"
 
 #. type: quote
 #: upstream/_guides/smallrye-graphql.adoc:59
 msgid "We recommend that you follow the instructions in the next sections and create the application step by step.  However, you can go right to the completed example."
-msgstr ""
+msgstr "次の章で紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。ただし、完成した例にそのまま進んでも構いません。"
 
 #. type: quote
 #: upstream/_guides/smallrye-graphql.adoc:61
 msgid "Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive]."
-msgstr ""
+msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone-url}` 、 {quickstarts-archive-url}[アーカイブ] をダウンロードします。"
 
 #. type: quote
 #: upstream/_guides/smallrye-graphql.adoc:63
 msgid "The solution is located in the `microprofile-graphql-quickstart` {quickstarts-tree-url}/microprofile-graphql-quickstart[directory]."
-msgstr ""
+msgstr "ソリューションは `microprofile-graphql-quickstart` {quickstarts-tree-url}/microprofile-graphql-quickstart[directory] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/smallrye-graphql.adoc:64
@@ -152,7 +152,7 @@ msgstr ""
 #. type: quote
 #: upstream/_guides/smallrye-graphql.adoc:67
 msgid "First, we need a new project. Create a new project with the following command:"
-msgstr ""
+msgstr "まず、新しいプロジェクトが必要です。以下のコマンドで新規プロジェクトを作成します。"
 
 #. type: delimited block -
 #: upstream/_guides/smallrye-graphql.adoc:76
@@ -174,7 +174,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/smallrye-graphql.adoc:82
 msgid "If you already have your Quarkus project configured, you can add the `smallrye-graphql` extension to your project by running the following command in your project base directory:"
-msgstr ""
+msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリーで以下のコマンドを実行することで、プロジェクトに `smallrye-graphql` エクステンションを追加することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/smallrye-graphql.adoc:86
@@ -185,7 +185,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/smallrye-graphql.adoc:89
 msgid "This will add the following to your `pom.xml`:"
-msgstr ""
+msgstr "これにより、 `pom.xml` に以下が追加されます:"
 
 #. type: delimited block -
 #: upstream/_guides/smallrye-graphql.adoc:96
@@ -201,17 +201,17 @@ msgstr ""
 #: upstream/_guides/smallrye-graphql.adoc:98
 #, no-wrap
 msgid "Preparing an Application: GraphQL API"
-msgstr ""
+msgstr "アプリケーションの準備: GraphQL API"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-graphql.adoc:101
 msgid "In this section we will start creating the GraphQL API."
-msgstr ""
+msgstr "このセクションでは、GraphQL APIの作成を開始します。"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-graphql.adoc:103
 msgid "First, create the following entities representing a film from a galaxy far far away:"
-msgstr ""
+msgstr "まず、遠く離れた銀河系の映画を表す次のような実体を作りなさい。"
 
 #. type: delimited block -
 #: upstream/_guides/smallrye-graphql.adoc:107
@@ -728,18 +728,18 @@ msgstr ""
 #: upstream/_guides/smallrye-graphql.adoc:351
 #, no-wrap
 msgid "Launch"
-msgstr ""
+msgstr "起動"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-graphql.adoc:354
 msgid "Launch the quarkus app:"
-msgstr ""
+msgstr "quarkusアプリを起動します。"
 
 #. type: delimited block -
 #: upstream/_guides/smallrye-graphql.adoc:357
 #, no-wrap
 msgid "./mvnw compile quarkus:dev\n"
-msgstr ""
+msgstr "./mvnw compile quarkus:dev\n"
 
 #. type: Title ==
 #: upstream/_guides/smallrye-graphql.adoc:359
@@ -767,7 +767,7 @@ msgstr ""
 #: upstream/_guides/smallrye-graphql.adoc:370
 #, no-wrap
 msgid "GraphiQL UI"
-msgstr ""
+msgstr "GraphiQL UI"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-graphql.adoc:373
@@ -1536,7 +1536,7 @@ msgstr ""
 #: upstream/_guides/smallrye-graphql.adoc:851
 #, no-wrap
 msgid "Conclusion"
-msgstr ""
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-graphql.adoc:855
@@ -1552,4 +1552,4 @@ msgstr ""
 #: upstream/_guides/smallrye-graphql.adoc:860
 #, no-wrap
 msgid "Configuration Reference"
-msgstr ""
+msgstr "設定リファレンス"
