--- a/l10n/po/ja_JP/_guides/smallrye-metrics.adoc.po
+++ b/l10n/po/ja_JP/_guides/smallrye-metrics.adoc.po
@@ -38,12 +38,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:19
 msgid "The metrics can be read remotely using JSON format or the OpenMetrics format, so that they can be processed by additional tools such as Prometheus, and stored for analysis and visualisation."
-msgstr ""
+msgstr "このように、JSON 形式または OpenMetrics 形式を使用してメトリクスをリモートで読み取ることができるため、Prometheus などの追加ツールで処理したり、分析や可視化のために保存したりすることができます。"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:23
 msgid "Apart from application-specific metrics, which are described in this guide, you may also utilize built-in metrics exposed by various Quarkus extensions. These are described in the guide for each particular extension that supports built-in metrics."
-msgstr ""
+msgstr "このガイドで説明するアプリケーション固有のメトリクスとは別に、Quarkusのさまざまなエクステンションによって公開されているビルトインメトリクスを利用することもできます。これらについては、ビルトインメトリクスをサポートしている各エクステンションのガイドで説明します。"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:26
@@ -54,12 +54,12 @@ msgstr ""
 #: upstream/_guides/smallrye-metrics.adoc:27
 #, no-wrap
 msgid "Prerequisites"
-msgstr ""
+msgstr "前提条件"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:30
 msgid "To complete this guide, you need:"
-msgstr ""
+msgstr "このガイドを完成させるには、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:32
@@ -69,49 +69,49 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:33
 msgid "an IDE"
-msgstr ""
+msgstr "IDE"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:34
 msgid "JDK 1.8+ installed with `JAVA_HOME` configured appropriately"
-msgstr ""
+msgstr "JDK 1.8+ がインストールされ、 `JAVA_HOME`  が適切に設定されていること"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:35
 msgid "Apache Maven {maven-version}"
-msgstr ""
+msgstr "Apache Maven {maven-version}"
 
 #. type: Title ==
 #: upstream/_guides/smallrye-metrics.adoc:36
 #, no-wrap
 msgid "Architecture"
-msgstr ""
+msgstr "アーキテクチャ"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:40
 msgid "In this example, we build a very simple microservice which offers one REST endpoint and that endpoint serves for determining whether a number is prime. The implementation class is annotated with some metric annotations so that while responding to user's requests, some metrics are gathered. The meaning of each metric will be explained later."
-msgstr ""
+msgstr "この例では、1つのRESTエンドポイントを提供する非常にシンプルなマイクロサービスを構築し、そのエンドポイントは数値が素数であるかどうかを判断するのに役立ちます。実装クラスは、ユーザーのリクエストに応答している間に、いくつかのメトリクスが収集されるように、いくつかのメトリックアノテーションが付与されています。各メトリックの意味は後ほど説明します。"
 
 #. type: Title ==
 #: upstream/_guides/smallrye-metrics.adoc:41
 #, no-wrap
 msgid "Solution"
-msgstr ""
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:45
 msgid "We recommend that you follow the instructions in the next sections and create the application step by step.  However, you can go right to the completed example."
-msgstr ""
+msgstr "次の章で紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。ただし、完成した例にそのまま進んでも構いません。"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:47
 msgid "Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive]."
-msgstr ""
+msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone-url}` 、 {quickstarts-archive-url}[アーカイブ] をダウンロードします。"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:49
 msgid "The solution is located in the `microprofile-metrics-quickstart` {quickstarts-tree-url}/microprofile-metrics-quickstart[directory]."
-msgstr ""
+msgstr "ソリューションは `microprofile-metrics-quickstart` {quickstarts-tree-url}/microprofile-metrics-quickstart[directory] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/smallrye-metrics.adoc:50
@@ -122,7 +122,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:53
 msgid "First, we need a new project. Create a new project with the following command:"
-msgstr ""
+msgstr "まず、新しいプロジェクトが必要です。以下のコマンドで新規プロジェクトを作成します。"
 
 #. type: delimited block -
 #: upstream/_guides/smallrye-metrics.adoc:63
@@ -145,7 +145,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:69
 msgid "If you already have your Quarkus project configured, you can add the `smallrye-metrics` extension to your project by running the following command in your project base directory:"
-msgstr ""
+msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリーで以下のコマンドを実行することで、プロジェクトに `smallrye-metrics` エクステンションを追加することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/smallrye-metrics.adoc:73
@@ -156,7 +156,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:76
 msgid "This will add the following to your `pom.xml`:"
-msgstr ""
+msgstr "これにより、 `pom.xml` に以下が追加されます:"
 
 #. type: delimited block -
 #: upstream/_guides/smallrye-metrics.adoc:83
@@ -172,39 +172,39 @@ msgstr ""
 #: upstream/_guides/smallrye-metrics.adoc:85
 #, no-wrap
 msgid "Writing the application"
-msgstr ""
+msgstr "アプリケーションの記述"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:90
 msgid "The application consists of a single class that implements an algorithm for checking whether a number is prime.  This algorithm is exposed over a REST interface. Additionally, we need a few annotations to make sure that our desired metrics are calculated over time and can be exported for manual analysis or processing by additional tooling."
-msgstr ""
+msgstr "このアプリケーションは、数値が素数であるかどうかをチェックするアルゴリズムを実装した単一のクラスで構成されています。このアルゴリズムは、RESTインターフェースを介して公開されています。さらに、必要なメトリクスが時間の経過とともに計算され、手動分析や追加のツールによる処理のためにエクスポートできることを確認するために、いくつかのアノテーションが必要です。"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:92
 msgid "The metrics that we will gather are these:"
-msgstr ""
+msgstr "集めようとしているメトリクスは、以下の通りです："
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:94
 #: upstream/_guides/smallrye-metrics.adoc:212
 msgid "`performedChecks`: A counter which is increased by one each time the user asks about a number."
-msgstr ""
+msgstr "`performedChecks` : ユーザーが数字を尋ねるたびに1つ増えるカウンター。"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:95
 #: upstream/_guides/smallrye-metrics.adoc:213
 msgid "`highestPrimeNumberSoFar`: This is a gauge that stores the highest number that was asked about by the user and which was determined to be prime."
-msgstr ""
+msgstr "`highestPrimeNumberSoFar` : ユーザーから質問されて素数と判断された最高の数字を保存するゲージ。"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:96
 msgid "`checksTimer`: This is a timer, therefore a compound metric that benchmarks how much time the primality tests take. We will explain that one in more details later."
-msgstr ""
+msgstr "`checksTimer` : これはタイマーであり、したがって、プライマリテストにどれだけの時間がかかるかをベンチマークする複合メトリックです。これについては後ほど詳しく説明します。"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:98
 msgid "The full source code looks like this:"
-msgstr ""
+msgstr "完全なソースコードは以下のようになります。"
 
 #. type: delimited block -
 #: upstream/_guides/smallrye-metrics.adoc:102
@@ -232,6 +232,10 @@ msgid ""
 "import javax.ws.rs.Produces;\n"
 "import javax.ws.rs.core.MediaType;\n"
 msgstr ""
+"import javax.ws.rs.GET;\n"
+"import javax.ws.rs.Path;\n"
+"import javax.ws.rs.Produces;\n"
+"import javax.ws.rs.core.MediaType;\n"
 
 #. type: delimited block -
 #: upstream/_guides/smallrye-metrics.adoc:116
@@ -301,23 +305,23 @@ msgstr ""
 #: upstream/_guides/smallrye-metrics.adoc:156
 #, no-wrap
 msgid "Running and using the application"
-msgstr ""
+msgstr "アプリケーションの実行と使用"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:159
 msgid "To run the microservice in dev mode, use `./mvnw clean compile quarkus:dev`"
-msgstr ""
+msgstr "マイクロサービスをdevモードで実行するには、次のようにします。 `./mvnw clean compile quarkus:dev`"
 
 #. type: Title ===
 #: upstream/_guides/smallrye-metrics.adoc:160
 #, no-wrap
 msgid "Generate some values for the metrics"
-msgstr ""
+msgstr "メトリクスの値を生成する"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:162
 msgid "First, ask the endpoint whether some numbers are prime numbers."
-msgstr ""
+msgstr "まず、ある数が素数であるかどうかをエンドポイントに問います。"
 
 #. type: delimited block -
 #: upstream/_guides/smallrye-metrics.adoc:166
@@ -328,12 +332,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:169
 msgid "The application will respond that 350 is not a prime number because it can be divided by 2."
-msgstr ""
+msgstr "アプリでは、350は2で割れるので素数ではないと回答します。"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:171
 msgid "Now for some large prime number so that the test takes a bit more time:"
-msgstr ""
+msgstr "次に、テストにもう少し時間がかかるように、いくらか大きな素数で実行します。"
 
 #. type: delimited block -
 #: upstream/_guides/smallrye-metrics.adoc:175
@@ -344,18 +348,18 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:179
 msgid "The application will respond that 629521085409773 is a prime number.  If you want, try some more calls with numbers of your choice."
-msgstr ""
+msgstr "アプリは629521085409773が素数であることを回答します。お好みで、好きな番号でもう何回か呼び出してみてください。"
 
 #. type: Title ===
 #: upstream/_guides/smallrye-metrics.adoc:180
 #, no-wrap
 msgid "Review the generated metrics"
-msgstr ""
+msgstr "生成されたメトリクスを確認する"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:183
 msgid "To view the metrics, execute `curl -H\"Accept: application/json\" localhost:8080/q/metrics/application` You will receive a response such as:"
-msgstr ""
+msgstr "メトリクスを表示するには、 `curl -H\"Accept: application/json\" localhost:8080/q/metrics/application` を実行します。実行すると次のようなレスポンスが表示されます:"
 
 #. type: delimited block -
 #: upstream/_guides/smallrye-metrics.adoc:207
@@ -387,55 +391,55 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:210
 msgid "Let's explain the meaning of each metric:"
-msgstr ""
+msgstr "それぞれのメトリックの意味を説明しましょう。"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:214
 msgid "`checksTimer`: This is a timer, therefore a compound metric that benchmarks how much time the primality tests take. All durations are measured in milliseconds. It consists of these values:"
-msgstr ""
+msgstr "`checksTimer` : これはタイマーであり、したがって、プライマリテストにどれだけの時間がかかるかをベンチマークとする複合メトリックです。すべての持続時間はミリ秒単位で測定されます。これらの値で構成されています:"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:215
 msgid "`min`: The shortest duration it took to perform a primality test, probably it was performed for a small number."
-msgstr ""
+msgstr "`min` : 素数チェックを行うのにかかった時間の最短所要時間、おそらく小さな数に対して行われたものではないかと思います。"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:216
 msgid "`max`: The longest duration, probably it was with a large prime number."
-msgstr ""
+msgstr "`max` : 最長所要時間、おそらく大きな素数に対して行われたものです。"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:217
 msgid "`mean`: The mean value of the measured durations."
-msgstr ""
+msgstr "`mean` : 計測された所要時間の平均値。"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:218
 msgid "`stddev`: The standard deviation."
-msgstr ""
+msgstr "`stddev` : 標準偏差。"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:219
 msgid "`count`: The number of observations (so it will be the same value as `performedChecks`)."
-msgstr ""
+msgstr "`count` : 試行回数(なので `performedChecks` と同じ値になります)。"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:220
 msgid "`p50, p75, p95, p99, p999`: Percentiles of the durations. For example the value in `p95` means that 95 % of the measurements were faster than this duration."
-msgstr ""
+msgstr "`p50, p75, p95, p99, p999` : 所要時間のパーセンタイル。例えば、 `p95` の値は、試行の95%がこの所要時間よりも速いことを意味します。"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:221
 msgid "`meanRate, oneMinRate, fiveMinRate, fifteenMinRate`: Mean throughput and one-, five-, and fifteen-minute exponentially-weighted moving average throughput."
-msgstr ""
+msgstr "`meanRate, oneMinRate, fiveMinRate, fifteenMinRate` : 平均スループットと 1、5、および 15 分間の指数関数的に加重された移動平均スループット。"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:223
 msgid "If you prefer an OpenMetrics export rather than the JSON format, remove the `-H\"Accept: application/json\"` argument from your command line."
-msgstr ""
+msgstr "JSON形式ではなくOpenMetricsのエクスポートを希望する場合は、コマンドラインから `-H\"Accept: application/json\"` 引数を削除してください。"
 
 #. type: Title ==
 #: upstream/_guides/smallrye-metrics.adoc:224
 #, no-wrap
 msgid "Configuration Reference"
-msgstr ""
+msgstr "設定リファレンス"
